2006-04-10  Guillem Jover  <guillem@debian.org>

	* src/main.h (fc_autoselect): Remove.
	* src/main.c (fc_autoselect): Likewise.
	(forceinfos): Mark 'auto-select' as obsolete.
	(setforce): Remove mention of 'auto-select' from the help text.
	Handle obsolete options, and display a warning.

2006-04-09  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-shlibdeps.pl: Support system library directories
	symlinked from '/lib/ldconfig/'.

2006-04-09   Branden Robinson  <branden@debian.org>,
	     Guillem Jover  <guillem@debian.org>

	* src/main.c (execbackend): Pass '--admindir' over to dpkg-query
	when passing '--admindir' or '--root' to dpkg.

2006-04-04  Andrew Suffield  <asuffield@debian.org>

	* dpkg-buildpackage.sh: Use mustsetvar to set sversion variable.

2006-04-04  Jared Spiegel  <jrrs@frontiernet.net>

	* utils/start-stop-daemon.c (do_help): Add '-r' option to the help
	output.

2006-04-04  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (main): Prefix the chroot path, if any,
	when stating the exec file.

2006-03-30  Guillem Jover  <guillem@debian.org>

	* src/main.c (setforce): Add a '[!]' next to 'all' to denote that
	'--force-all' is dangerous.

2006-03-20  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.13.18~.

2006-03-20  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.13.17.

2006-03-20  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c [OSLinux] (pid_is_exec): Revert back to
	take a struct stat instead of an execname. Get the filename pointed
	by the '/proc/<pid>/exe' symlink, strip any ' (deleted)' string, and
	stat that filename comparing the result with the new argument.

2006-03-15  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl.in: Rename to ...
	* scripts/controllib.pl: ... this.
	(debian_arch_expand): Remove function. Fix all callers.
	(pkgdatadir, read_cputable, read_ostable): Move to ...
	* scripts/dpkg-architecture.pl: ... here.