@@ -204,6 +204,11 @@ in the format '<package> <state>', where state is one of install, hold,
 deinstall or purge. Blank lines and comment lines beginning with '#'
 are also permitted.
 .TP
+.B dpkg \-\-clear\-selections
+Set the requested state of every non-essential package to deinstall.
+This is intended to be used immediately before \-\-set\-selections, to
+deinstall any packages not in list given to \-\-set\-selections.
+.TP
 .B dpkg \-\-yet\-to\-unpack
 Searches for packages selected for installation, but which for some
 reason still haven't been installed.
