@@ -53,7 +53,8 @@ enum action { act_unset, act_install, act_unpack, act_avail, act_configure,
               act_unpackchk, act_status, act_searchfiles, act_audit, act_listfiles,
               act_assertpredep, act_printarch, act_predeppackage, act_cmpversions,
               act_printinstarch, act_compareversions, act_printavail, act_avclear,
-              act_forgetold, act_getselections, act_setselections,
+              act_forgetold,
+              act_getselections, act_setselections, act_clearselections,
               act_assertepoch, act_assertlongfilenames, act_assertmulticonrep,
 	      act_commandfd };
 
@@ -139,6 +140,7 @@ int pkglistqsortcmp(const void *a, const void *b);
 
 void getselections(const char *const *argv);
 void setselections(const char *const *argv);
+void clearselections(const char *const *argv);
 
 /* from packages.c, remove.c and configure.c */
 
