@@ -39,6 +39,8 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
   * Document that 'dpkg --get-selections' and 'dpkg-query -l' without a
     pattern will not list packages in state purge. Closes: #355633
   * Obsolete force/refuse 'auto-select' dpkg option.
+  * Add new '--clear-selections' option to dpkg (Andrew Suffield).
+    Closes: #112388
 
   [ Christian Perrier ]
   * 
