@@ -1,3 +1,7 @@
+2006-04-10  Andrew Suffield  <asuffield@debian.org>
+
+	* C/dpkg.1: Document the new '--clear-selections' option.
+
 2006-04-10  Guillem Jover  <guillem@debian.org>
 
 	* C/dpkg.1: Remove mention of obsolete force/refuse 'auto-select'
