@@ -1,3 +1,10 @@
+2006-04-10  Andrew Suffield  <asuffield@debian.org>
+
+	* src/main.h (clearselections): New prototype.
+	* src/main.c (usage): Print '--clear-selections' option description.
+	(cmdinfos): Add clear-selectons action.
+	* src/select.c (clearselections): New function.
+
 2006-04-10  Guillem Jover  <guillem@debian.org>
 
 	* src/main.h (fc_autoselect): Remove.
